# links

./: .gitignore  Cargo.toml  Dockerfile  README.md  compile.sh  run.sh  run_container.sh  rustfmt.toml  settings.toml
.github/workflows/: docker-image.yml
html/: index.html  links-manifest.json  links.css  memo.css
links-server/: .gitignore  Cargo.toml  build.sh
links-server/k8s/: alias.sh  install_helm_chart.sh
links-server/k8s/links-helm/: Chart.yaml
links-server/k8s/links-helm/templates/: links-configmap.yml  links-deployment.yml  links-ingress.yml  links-server.yml
links-server/src/: catalog.rs  circular_string.rs  links.rs  main.rs  router.rs  save_to_git.rs  static_files.rs  utils.rs
links-server/tests/: no_security.sh  save.sh
links-wasm/: .gitignore  Cargo.toml  compile.sh
links-wasm/src/: lib.rs
src/: circular_string.rs  links.rs  main.rs  router.rs  server.rs  static_files.rs
tests/: click.sh  save.sh  stats.js
