[package]
name = "links-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper={ version="*", features = ["full"] }
futures = "0.3"
tokio = { version="*", features = ["full"] }
pretty_env_logger = "*"
config = "*"
lazy_static = "*"
itertools = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
regex = "1.4.5"
thiserror = "1.0"
async-lock = "2.4.0"

