[package]
name = "links-server"
version = "0.1.1"
edition = "2021"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
description = "A server for managing lists of urls."
repository = "https://github.com/ovidiu-ionescu/links-server"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper={ version="*", features = ["full"] }
futures = "0.3"
tokio = { version="*", features = ["full"] }
pretty_env_logger = "*"
config = "*"
lazy_static = "*"
itertools = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
regex = "1.4.5"
thiserror = "1.0"
async-lock = "2.4.0"
lib-hyper-organizator = { path = "/home/ovidiu/Projects/organizator-3/Backend/Server/lib-hyper-organizator", features = ["security"] }
mimalloc = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1.37"

