[package]
name = "links-wasm"
version = "0.1.2"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2021"
license = "AGPL-3"
description = "Text processing for the Organizator client"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
memo_rust= { git = "https://github.com/ovidiu-ionescu/aes256.git", branch = "master" }
pulldown-cmark= { git = "https://github.com/Experiments-2/pulldown-cmark-blank.git", branch = "master" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
